4.11 2014-12-02

    [ SPEC / BUG FIXES ]
    - more hash key ordering bugs fixed in HTML attribute output (GH #158,
      thanks to Marcus Meissner for the patch and test case)

    [ REFACTORING ]
    - escapeHTML (and unescapeHTML) have been refactored to use the functions
      exported by the HTML::Entities module (GH #157)
    - change BUILD_REQUIRES to TEST_REQUIRES in Makefile.PL as these are test
      dependencies not build dependencies (GH #159)

    [ DOCUMENTATION ]
    - replace any remaining uses of indirect object notation (new Object) with
      the safer Object->new syntax (GH #156)

4.10 2014-11-27

    [ SPEC / BUG FIXES ]
    - favour -content-type arg in header if -type and -charset options are also
      passed in (GH #155, thanks to kaoru for the test case). this change also
      sorts the hash keys in the rearrange method in CGI::Util meaning the order
      of the arrangement will always be the same for params that have multiple
      aliases. really you shouldn't be passing in multiple aliases, but this will
      make it consistent should you do that

    [ DOCUMENTATION ]
    - fix some typos

4.09 2014-10-21

    [ RELEASE NOTES ]
    - with this release the large backlog of issues against CGI.pm has been
      cleared. All fixes have been made in the versions 4.00 and above so if
      you are upgrading from 3.* you should thoroughly test your code against
      recent versions of CGI.pm
    - an effort has been made to retain back compatibility against previous
      versions of CGI.pm for any fixes made, however some changes related to
      the handling of temporary files may have consequences for your code
    - please refer to the RELEASE NOTES for version 4.00 and above for all
      recent changes and file an issue on github if there has been a regression.
    - please do *NOT* file issues regarding HTML generating functions, these
      are no longer being maintained (see perldoc for rationale)

    [ SPEC / BUG FIXES ]