@@ -1453,6 +1453,10 @@ END_OF_FUNC
 'url_param' => <<'END_OF_FUNC',
 sub url_param {
     my ($self,@p) = self_or_default(@_);
+    if (not defined $self->request_method) {
+        # Running from command line.
+        return $self->param(@p);
+    }
     my $name = shift(@p);
     return undef unless exists($ENV{QUERY_STRING});
     unless (exists($self->{'.url_param'})) {
@@ -5647,9 +5651,10 @@ interfere with similarly-named CGI parameters in POSTed forms.  If you
 try to mix a URL query string with a form submitted with the GET
 method, the results will not be what you expect.
 
-If running from the command line, C<url_param> will not pick up any
-parameters given on the command line.  This will change in a future
-version.
+If running from the command line, C<url_param> will pick up all
+parameters given on the command line or (with -debug) on standard
+input.  (It might change in future to return only command line
+parameters in this case.)
 
 =head1 CREATING STANDARD HTML ELEMENTS:
 
